# Baski

./: .gitignore  Cargo.toml  README.md  Rocket.toml  Rustfmt.toml  baski.toml  build.rs  less-watch-compiler.config.json  package.json  pnpm-lock.yaml  tsconfig.json
app/scss/: base.scss
app/scss/vars/: palette.scss
app/templates/: hello.html.tera
app/ts/: home.ts  live_reloading.ts
old/: Cargo.toml  README.md  Rocket.toml
old/app/scss/: home.scss
old/app/scss/components/: button.scss  index.scss  links.scss
old/src/fairings/: loader.rs  mod.rs  typescript.rs
old/src/routes/: mod.rs
src/: api.rs  assets.rs  config.rs  errors.rs  live_reloading.rs  main.rs  scss.rs  static_files.rs  templates.rs  typescript.rs
src/fairings/: live_reloading.rs  loader.rs  mod.rs  scss.rs  typescript.rs
src/loaders/: less.rs  mod.rs  scss.rs  typescript.rs
src/scss/: base.scss  home.scss
src/scss/components/: button.scss
src/scss/vars/: palette.scss
src/templates/: base.html.tera  i18n.rs  index.html.tera  mod.rs
src/ts/: hello.ts
static/css/: base.css  home.css
templates/: base.html.tera  hello.html.tera  index.html.tera
web/i18n/en/: simple.ftl
web/i18n/fr/: simple.ftl
web/less/: base.less  home.less
web/less/components/: button.less  index.less  links.less
web/less/vars/: palette.less
web/templates/: hello.html  home.html
web/templates/error/: 404.html
web/ts/: home.ts  live_reloading.ts
