[package]
name = "baski"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = "0.3.16"
tera = "1.17.1"
lazy_static = "1.4.0"
toml = "0.7.1"

[dependencies.poem]
version = "1.3.54"
features = ["server", "static-files"]

[dependencies.tokio]
version = "1.25.0"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]